--- a/infra/playbook.yml
+++ b/infra/playbook.yml
@@ -42,12 +42,15 @@
       failed_when: false
 
     - name: Create internal network
-      command: podman network create --subnet 10.0.1.0/24 internal_network
+      command: podman network create --subnet 192.0.1.0/24 internal_network
 
     - name: Create external network
-      command: podman network create --subnet 10.0.2.0/24 external_network
+      command: podman network create --subnet 192.0.2.0/24 external_network
 
-    - name: Run database container
+    - name: Create a persistent volume for PostgreSQL
+      command: mkdir -p /var/lib/postgres_data
+
+    - name: Run database container with persistent storage
       containers.podman.podman_container:
         name: database
         image: docker.io/library/postgres:latest
@@ -56,9 +59,11 @@
           POSTGRES_USER: myuser
           POSTGRES_PASSWORD: mypassword
         network: internal_network
-        ip: 10.0.1.2
+        ip: 192.0.1.2
         state: started
         restart_policy: always
+        volume:
+          - "/var/lib/postgres_data:/var/lib/postgresql/data"
 
     - name: Create table 'dados' in the database
       command: podman exec database psql -U myuser -d mydatabase -c "CREATE TABLE IF NOT EXISTS dados (dado VARCHAR);"
@@ -76,14 +81,14 @@
         image: docker.io/library/node:latest
         command: "tail -f /dev/null"
         network: internal_network
-        ip: 10.0.1.3
+        ip: 192.0.1.3
         ports:
           - "3000:3000"
         state: started
         restart_policy: always
 
     - name: Connect backend container to external network
-      command: podman network connect --ip 10.0.2.3 external_network backend
+      command: podman network connect --ip 192.0.2.3 external_network backend
 
     - name: Create directory for backend application in container
       containers.podman.podman_container_exec:
@@ -105,7 +110,7 @@
         image: docker.io/library/node:latest
         command: "tail -f /dev/null"
         network: external_network
-        ip: 10.0.2.4
+        ip: 192.0.2.4
         ports:
           - "80:80"
         state: started
